--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -669,9 +669,10 @@ body {
         display: none;
     }
     .nav-menu.responsive {
-        display: block;
-        width: 100%;
-        text-align: center;
+        display:block;
+        width: 50%;
+        text-align: right;
+        background-color:black;
     }
 
     .nav-menu-btn {
@@ -689,12 +690,33 @@ body {
         margin: 0 auto;
     }
 
+    .featured-name{
+        font-size: 40px;
+        font-weight: 600;
+        color: var(--text-color-second);
+        padding-top: 250px;
+    }   
+    
+    .featured-text-btn{
+        justify-content:center;
+        align-items: center;
+        display: flex;
+        gap: 20px;
+    }
+
+    .social_icons{
+        justify-content: center;
+        align-items: cneter;
+    }
+
     .featured-image .image {
         width: 300px;
         height: 300px;
+        padding-top: 80px;
     }
 
     .top-header h1 {
+        padding-top: 150px;
         font-size: 1.8rem;
     }
 
