nav menu responsive

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -567,19 +567,18 @@ footer{
     }
     .nav-menu{
         position: fixed;
-        top: 80px;
+        top: 62px;
         left: -100%;
         flex-direction: column;
         justify-content: center;
-        align-items: center;
-        background: rgba(255, 255, 255, 0.7);
-        backdrop-filter: blur(20px);
+        backdrop-filter: blur(0px);
         width: 100%;
-        min-height: 450px;
-        height: 90vh;
-        transition: .3s;
+        transition: 0.3s;
     }
     .nav_menu_list{
+        align-items: right;
+        backdrop-filter: blur(20px);
+        height: 100vh;
         flex-direction: column;
     }
     .nav-menu-btn{
@@ -668,11 +667,21 @@ body {
     .nav-menu {
         display: none;
     }
-    .nav-menu.responsive {
-        display:block;
-        width: 50%;
-        text-align: right;
-        background-color:black;
+    .nav-menu {
+        display:flex;
+        justify-content: space-between;
+    }
+
+    .nav_menu_list{
+        background: black;
+        position:fixed;
+        z-index: 999;
+        right:0;
+        top:0;
+        height:100vh;
+        width:40%;
+        margin:0;
+        text-align:right;
     }
 
     .nav-menu-btn {
